# demos

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  key.jks
app/src/main/cpp/: CCGLRender.cpp  CMakeLists.txt  ElementRender.cpp  GLBuffer.h  GLRender.cpp  Image.h  ImageRender.cpp  Render.cpp  Render.h  Shader.cpp  ShaderRender.cpp  TransitionRender.cpp  TransitionRender.h  log.h  shader.h  stb.cpp
app/src/main/cpp/libary/libglm/include/glm/: CMakeLists.txt
app/src/main/cpp/libary/libglm/include/glm/core/: _detail.hpp  _swizzle.hpp  _swizzle_func.hpp  _vectorize.hpp  dummy.cpp  func_common.hpp  func_common.inl  func_exponential.hpp  func_exponential.inl  func_geometric.hpp  func_geometric.inl  func_integer.hpp  func_integer.inl  func_matrix.hpp  func_matrix.inl  func_noise.hpp  func_noise.inl  func_packing.hpp  func_packing.inl  func_trigonometric.hpp  func_trigonometric.inl  func_vector_relational.hpp  func_vector_relational.inl  hint.hpp  intrinsic_common.hpp  intrinsic_common.inl  intrinsic_exponential.hpp  intrinsic_geometric.hpp  intrinsic_geometric.inl  intrinsic_matrix.hpp  intrinsic_matrix.inl  setup.hpp  type.hpp  type_float.hpp  type_gentype.hpp  type_gentype.inl  type_half.hpp  type_half.inl  type_int.hpp  type_mat.hpp  (+28 more)
app/src/main/cpp/libary/libglm/include/glm/gtc/: half_float.hpp  half_float.inl  matrix_access.hpp  matrix_access.inl  matrix_integer.hpp  matrix_inverse.hpp  matrix_inverse.inl  matrix_transform.hpp  matrix_transform.inl  noise.hpp  noise.inl  quaternion.hpp  quaternion.inl  random.hpp  random.inl  swizzle.hpp  swizzle.inl  type_precision.hpp  type_precision.inl  type_ptr.hpp  type_ptr.inl
app/src/main/cpp/libary/libglm/include/glm/gtx/: associated_min_max.hpp  associated_min_max.inl  bit.hpp  bit.inl  closest_point.hpp  closest_point.inl  color_cast.hpp  color_cast.inl  color_space.hpp  color_space.inl  color_space_YCoCg.hpp  color_space_YCoCg.inl  compatibility.hpp  compatibility.inl  component_wise.hpp  component_wise.inl  constants.hpp  constants.inl  epsilon.hpp  epsilon.inl  euler_angles.hpp  euler_angles.inl  extend.hpp  extend.inl  extented_min_max.hpp  extented_min_max.inl  fast_exponential.hpp  fast_exponential.inl  fast_square_root.hpp  fast_square_root.inl  fast_trigonometry.hpp  fast_trigonometry.inl  gradient_paint.hpp  gradient_paint.inl  handed_coordinate_space.hpp  handed_coordinate_space.inl  inertia.hpp  inertia.inl  int_10_10_10_2.hpp  int_10_10_10_2.inl  (+5 more)
app/src/main/cpp/libary/libstbImage/include/: stb_image.cpp
common/: build.gradle.kts
gradle/: libs.versions.toml
lame/: build.gradle.kts
lame/src/main/cpp/: CMakeLists.txt  LameEncoder.cpp
launch/: build.gradle.kts
media/: build.gradle.kts
opengl/: build.gradle.kts
syncplayer/src/main/cpp/: CMakeLists.txt  jni.cpp
syncplayer/src/main/cpp/libary/libresamplerate/include/: common.h  fastest_coeffs.h  mid_qual_coeffs.h  samplerate.c  samplerate.h  src_linear.c  src_sinc.c  src_zoh.c
(+178 files in other folders)
